--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "İnternet bağlantısını yoxla",
   "KNOW_MORE": "Daha çox bilgi",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Kolleksiyanda ən az bir qovluq qalmalıdır.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Musiqi dinlənir 💜",
   "LYRICS": "Sözlər",
   "LYRICS_NOT_FOUND": "Söz tapılmadı.",
   "LYRICS_RETRIEVING": "Sözlər getirilir...",
   "MENU": "Menyu",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Səssiz",
   "M_TRACKS_AND_N_ALBUMS": "M Müusiqi ilə N Albom",
   "NEXT": "Növbəti",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Sıradakı musiqilər",
   "PLAY_NOW": "İndi oynat",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Öncəki",
   "RECOMMENDATIONS": "Önərilənlər",
   "REFRESH": "YENİLƏ",
@@ -173,12 +175,12 @@
   "UNMUTE": "SƏSSİZDƏN ÇIXAR",
   "VIDEO_SINGLE": "Video",
   "WARNING": "BİLDİRİŞ",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "Onlayn olana qədər cihazındakı bir musiqini oynata bilərsən.",
+  "WEB_NO_RESULTS": "Axtarışınla uyğunlaşan bir nəticə tapılmadı.",
+  "WEB_WELCOME": "Bir musiqi axtar və ya bağlantı yapışdır...",
+  "WEB_WELCOME_SUBTITLE": "Önərilənlər dinlədiklərinizə görə görüntülənir.",
+  "WEB_WELCOME_TITLE": "Gəl başlayaq...",
   "YEAR": "İL",
-  "YES": "BƏLİ",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Onlayn olana qədər cihazındakı bir musiqini oynata bilərsən.",
-  "YOUTUBE_NO_RESULTS": "Axtarışınla uyğunlaşan bir nəticə tapılmadı.",
-  "YOUTUBE_WELCOME": "Bir musiqi axtar və ya bağlantı yapışdır...",
-  "YOUTUBE_WELCOME_SUBTITLE": "Önərilənlər dinlədiklərinizə görə görüntülənir.",
-  "YOUTUBE_WELCOME_TITLE": "Gəl başlayaq..."
+  "YES": "BƏLİ"
 }
