--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "Überprüfen Sie Ihre Internetverbindung...",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "Lyrics",
   "LYRICS_NOT_FOUND": "Lyrics not found.",
   "LYRICS_RETRIEVING": "Retrieving lyrics...",
   "MENU": "Menu",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Here are the tracks in this playlist",
   "PLAY_NOW": "Play now",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Recommendations",
   "REFRESH": "Refresh",
@@ -173,12 +175,12 @@
   "UNMUTE": "Unmute",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Warning",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "Let's play your local music, while you get back online..",
+  "WEB_NO_RESULTS": "Nothing like that could be found.",
+  "WEB_WELCOME": "Search for music or give a link",
+  "WEB_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
+  "WEB_WELCOME_TITLE": "Let's Go",
   "YEAR": "Year",
-  "YES": "JA",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online..",
-  "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
-  "YOUTUBE_WELCOME": "Search for music or give a link",
-  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
-  "YOUTUBE_WELCOME_TITLE": "Let's Go"
+  "YES": "JA"
 }
