--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "وضعیت اتصال خود را بررسی کنید.",
   "KNOW_MORE": "بیشتر بدانید...",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "حداقل یک پوشه باید در کالکشن شما باشد.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "گوش دادن به موزیک💜",
   "LYRICS": "تکست‌ها",
   "LYRICS_NOT_FOUND": "تکست آهنگ پیدا نشد.",
   "LYRICS_RETRIEVING": "گرفتن تکست‌ها...",
   "MENU": "منو",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "بی‌صدا",
   "M_TRACKS_AND_N_ALBUMS": "M آهنگ و N آلبوم",
   "NEXT": "بعدی",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "اینجا موسیقی‌های لیست پخش را مشاهده می‌کنید.",
   "PLAY_NOW": "شروع",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "قبلی",
   "RECOMMENDATIONS": "پیشنهادات",
   "REFRESH": "بروزرسانی",
@@ -173,12 +175,12 @@
   "UNMUTE": "با صدا",
   "VIDEO_SINGLE": "Video",
   "WARNING": "هشدار",
+  "WEB": "یوتیوب",
+  "WEB_INTERNET_ERROR": "موزیک‌های خودتان را تا وقتی آنلاین شدید، پخش کنید.",
+  "WEB_NO_RESULTS": "چیزی مثل عبارت شما پیدا نشد.",
+  "WEB_WELCOME": "لینک خود و یا اسم آهنگ را جستجو کنید.",
+  "WEB_WELCOME_SUBTITLE": "پیشنهادات در این محل بر اساس موسیقی‌های گوش داده شده، به نمایش در می‌آید.",
+  "WEB_WELCOME_TITLE": "شروع کنید.",
   "YEAR": "سال",
-  "YES": "بله",
-  "YOUTUBE": "یوتیوب",
-  "YOUTUBE_INTERNET_ERROR": "موزیک‌های خودتان را تا وقتی آنلاین شدید، پخش کنید.",
-  "YOUTUBE_NO_RESULTS": "چیزی مثل عبارت شما پیدا نشد.",
-  "YOUTUBE_WELCOME": "لینک خود و یا اسم آهنگ را جستجو کنید.",
-  "YOUTUBE_WELCOME_SUBTITLE": "پیشنهادات در این محل بر اساس موسیقی‌های گوش داده شده، به نمایش در می‌آید.",
-  "YOUTUBE_WELCOME_TITLE": "شروع کنید."
+  "YES": "بله"
 }
