--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "Aucune connexion Internet",
   "KNOW_MORE": "En savoir plus",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Un répertoire au moins doit être présent dans votre collection.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "En écoute 💜",
   "LYRICS": "Paroles",
   "LYRICS_NOT_FOUND": "Paroles non trouvées",
   "LYRICS_RETRIEVING": "Récupération des paroles...",
   "MENU": "Menu",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M pistes & N albums",
   "NEXT": "Suivant",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Pistes dans la playlist",
   "PLAY_NOW": "Lire maintenant",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Précédent",
   "RECOMMENDATIONS": "Recommandations",
   "REFRESH": "Actualiser",
@@ -173,12 +175,12 @@
   "UNMUTE": "Unmute",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Attention",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "Lire votre musique locale en attendant d'être à nouveau connecté.",
+  "WEB_NO_RESULTS": "Aucune correspondance trouvée.",
+  "WEB_WELCOME": "Rechercher une chanson ou un lien",
+  "WEB_WELCOME_SUBTITLE": "Les recommandations apparaitront ici, en fonction de ce que vous écoutez.",
+  "WEB_WELCOME_TITLE": "C'est parti !",
   "YEAR": "Année",
-  "YES": "Oui",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Lire votre musique locale en attendant d'être à nouveau connecté.",
-  "YOUTUBE_NO_RESULTS": "Aucune correspondance trouvée.",
-  "YOUTUBE_WELCOME": "Rechercher une chanson ou un lien",
-  "YOUTUBE_WELCOME_SUBTITLE": "Les recommandations apparaitront ici, en fonction de ce que vous écoutez.",
-  "YOUTUBE_WELCOME_TITLE": "C'est parti !"
+  "YES": "Oui"
 }
