--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "अपना इंटरनेट कनेक्शन चेक करें।",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "आपके कलेक्शन में कम से कम एक फ़ोल्डर रहने की आवश्यकता है।",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "गाने के बोल",
   "LYRICS_NOT_FOUND": "गाने के बोल नहीं मिले",
   "LYRICS_RETRIEVING": "गाने के बोल पुनः प्राप्त किये जा रहे है...",
   "MENU": "मेन्यू",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "इस प्लेलिस्ट के गाने",
   "PLAY_NOW": "अभी गाना बजाएं",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "अनुशंसित",
   "REFRESH": "रिफ्रेश",
@@ -173,12 +175,12 @@
   "UNMUTE": "Unmute",
   "VIDEO_SINGLE": "Video",
   "WARNING": "चेतावनी",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "जब तक आप वापस ऑनलाइन हो जाते हैं, तब तक हम आपका स्थानीय संगीत बजाते हैं।",
+  "WEB_NO_RESULTS": "ऐसा कुछ नहीं मिला।",
+  "WEB_WELCOME": "संगीत खोजें या लिंक दें",
+  "WEB_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
+  "WEB_WELCOME_TITLE": "Let's Go",
   "YEAR": "Year",
-  "YES": "हाँ",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "जब तक आप वापस ऑनलाइन हो जाते हैं, तब तक हम आपका स्थानीय संगीत बजाते हैं।",
-  "YOUTUBE_NO_RESULTS": "ऐसा कुछ नहीं मिला।",
-  "YOUTUBE_WELCOME": "संगीत खोजें या लिंक दें",
-  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
-  "YOUTUBE_WELCOME_TITLE": "Let's Go"
+  "YES": "हाँ"
 }
