--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "Nincs internetelérés.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "Énekszöveg",
   "LYRICS_NOT_FOUND": "Nem található énekszöveg.",
   "LYRICS_RETRIEVING": "Énekszöveg betöltése...",
   "MENU": "Menü",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "A lejátszási lista számai",
   "PLAY_NOW": "Lejátszás most",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Ajánlott",
   "REFRESH": "FRISSÍTÉS",
@@ -173,12 +175,12 @@
   "UNMUTE": "Unmute",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Warning",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "Folytassuk a helyi zenéiddel, amíg vissza nem tér az internet.",
+  "WEB_NO_RESULTS": "Nincs találat a YT Music-on!",
+  "WEB_WELCOME": "Keresés a YT Music-on (vagy link bemásolása)",
+  "WEB_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
+  "WEB_WELCOME_TITLE": "Let's Go",
   "YEAR": "Year",
-  "YES": "IGEN",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Folytassuk a helyi zenéiddel, amíg vissza nem tér az internet.",
-  "YOUTUBE_NO_RESULTS": "Nincs találat a YouTube-on!",
-  "YOUTUBE_WELCOME": "Keresés a YouTube-on (vagy link bemásolása)",
-  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
-  "YOUTUBE_WELCOME_TITLE": "Let's Go"
+  "YES": "IGEN"
 }
