--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "インターネット接続を確認してください。",
   "KNOW_MORE": "もっと見る",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "コレクションには1つ以上のフォルダを残しておく必要があります。",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "音楽を聴く 💜",
   "LYRICS": "歌詞",
   "LYRICS_NOT_FOUND": "歌詞が見つかりませんでした。",
   "LYRICS_RETRIEVING": "歌詞を受信中...",
   "MENU": "メニュー",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "ミュート",
   "M_TRACKS_AND_N_ALBUMS": "M トラック & N アルバム",
   "NEXT": "次へ",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "このプレイリストには以下のトラックがあります",
   "PLAY_NOW": "今すぐ再生",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "前へ",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
@@ -173,12 +175,12 @@
   "UNMUTE": "ミュート解除",
   "VIDEO_SINGLE": "Video",
   "WARNING": "注意",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "オンラインに復帰するまで端末の音楽を再生しましょう。",
+  "WEB_NO_RESULTS": "見つかりませんでした。",
+  "WEB_WELCOME": "音楽を検索するかリンクを入力",
+  "WEB_WELCOME_SUBTITLE": "あなたが聞いた音楽を基におすすめがここに表示されます",
+  "WEB_WELCOME_TITLE": "さあ、行こう",
   "YEAR": "年",
-  "YES": "はい",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "オンラインに復帰するまで端末の音楽を再生しましょう。",
-  "YOUTUBE_NO_RESULTS": "見つかりませんでした。",
-  "YOUTUBE_WELCOME": "音楽を検索するかリンクを入力",
-  "YOUTUBE_WELCOME_SUBTITLE": "あなたが聞いた音楽を基におすすめがここに表示されます",
-  "YOUTUBE_WELCOME_TITLE": "さあ、行こう"
+  "YES": "はい"
 }
