--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "Hamarino ny fifandraisana Internet anao.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Farafahakeliny rakitra iray tsy maintsy mijanona ao amin'ny fanangonana.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "Tonon-kira",
   "LYRICS_NOT_FOUND": "Tsy hita ilay tonon-kira.",
   "LYRICS_RETRIEVING": "Famerenana tonon-kira ...",
   "MENU": "Menu",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Ireto ny hira avy amin'ity filaharan-kira ity",
   "PLAY_NOW": "Vakio izao",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Tolo-kevitra",
   "REFRESH": "Havaozina",
@@ -173,12 +175,12 @@
   "UNMUTE": "Unmute",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Tandremo",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "Mihaino ny mozika eo an-toerana mandritra ny fiandrasana Internet .",
+  "WEB_NO_RESULTS": "Tsy misy fifandraisana hita",
+  "WEB_WELCOME": "Mikaroha hira na ny rohiny",
+  "WEB_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
+  "WEB_WELCOME_TITLE": "Let's Go",
   "YEAR": "Year",
-  "YES": "ENY",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Mihaino ny mozika eo an-toerana mandritra ny fiandrasana Internet .",
-  "YOUTUBE_NO_RESULTS": "Tsy misy fifandraisana hita",
-  "YOUTUBE_WELCOME": "Mikaroha hira na ny rohiny",
-  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
-  "YOUTUBE_WELCOME_TITLE": "Let's Go"
+  "YES": "ENY"
 }
