--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "Controleer uw internet verbinding...",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Er moet ten minste één map in uw collectie blijven.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "Songteksten",
   "LYRICS_NOT_FOUND": "Songteksten niet gevonden.",
   "LYRICS_RETRIEVING": "Songteksten ophalen...",
   "MENU": "Menu",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Hier zijn de nummers in deze afspeellijst",
   "PLAY_NOW": "Nu afspelen",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Aanbevelingen",
   "REFRESH": "HERLADEN",
@@ -173,12 +175,12 @@
   "UNMUTE": "Unmute",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Waarschuwing",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "We spelen wat lokale muziek af, totdat je terug online bent.",
+  "WEB_NO_RESULTS": "Zoiets was niet te vinden.",
+  "WEB_WELCOME": "Zoek naar muziek of geef een link",
+  "WEB_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
+  "WEB_WELCOME_TITLE": "Let's Go",
   "YEAR": "Year",
-  "YES": "JA",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "We spelen wat lokale muziek af, totdat je terug online bent.",
-  "YOUTUBE_NO_RESULTS": "Zoiets was niet te vinden.",
-  "YOUTUBE_WELCOME": "Zoek naar muziek of geef een link",
-  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
-  "YOUTUBE_WELCOME_TITLE": "Let's Go"
+  "YES": "JA"
 }
