--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "Verifique sua conexão com a internet...",
   "KNOW_MORE": "SABER MAIS",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Pelo menos uma pasta precisa permanecer em sua coleção.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Ouvindo música 💜",
   "LYRICS": "Letras",
   "LYRICS_NOT_FOUND": "Letras não disponíveis.",
   "LYRICS_RETRIEVING": "Baixando letras...",
   "MENU": "Menu",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Mudo",
   "M_TRACKS_AND_N_ALBUMS": "M faixas & N albums",
   "NEXT": "Próxima",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa lista de reprodução",
   "PLAY_NOW": "Reproduzir agora",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Anterior",
   "RECOMMENDATIONS": "Recomendações",
   "REFRESH": "ATUALIZAR",
@@ -173,12 +175,12 @@
   "UNMUTE": "Desativar Mudo",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Aviso",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "Vamos tocar sua música local, enquanto você fica online novamente..",
+  "WEB_NO_RESULTS": "Nada como isso poderia ser encontrado.",
+  "WEB_WELCOME": "Pesquise músicas ou forneça um link",
+  "WEB_WELCOME_SUBTITLE": "As recomendações aparecerão aqui com base no que você ouve.",
+  "WEB_WELCOME_TITLE": "Vamos",
   "YEAR": "Ano",
-  "YES": "SIM",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Vamos tocar sua música local, enquanto você fica online novamente..",
-  "YOUTUBE_NO_RESULTS": "Nada como isso poderia ser encontrado.",
-  "YOUTUBE_WELCOME": "Pesquise músicas ou forneça um link",
-  "YOUTUBE_WELCOME_SUBTITLE": "As recomendações aparecerão aqui com base no que você ouve.",
-  "YOUTUBE_WELCOME_TITLE": "Vamos"
+  "YES": "SIM"
 }
