--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "Prosimo, preverite vašo internetno povezavo",
   "KNOW_MORE": "POGLEJ VEČ",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Vsaj en direktorij mora ostati v tvoji zbirki.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Posluša glasbo 💜",
   "LYRICS": "Besedilo pesmi",
   "LYRICS_NOT_FOUND": "Besedilo pesmi ni bilo najdeno.",
   "LYRICS_RETRIEVING": "Pridobivanje besedila pesmi...",
   "MENU": "Meni",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M pesmi & N albumov",
   "NEXT": "Next",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Tukaj so pesmi iz seznama predvajanja",
   "PLAY_NOW": "Predvajaj zdaj",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Prejšnja",
   "RECOMMENDATIONS": "Priporočeno",
   "REFRESH": "OSVEŽI",
@@ -173,12 +175,12 @@
   "UNMUTE": "Unmute",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Opozorilo",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "Predvajajmo lokalno glasbo, medtem ko ni internetne povezave.",
+  "WEB_NO_RESULTS": "Iskali smo širno, a tega nismo mogli najti.",
+  "WEB_WELCOME": "Išči za glasbo ali pa vpiši povezavo",
+  "WEB_WELCOME_SUBTITLE": "Priporočila se bodo pojavljala tukaj, glede na to, kaj boste iskali.",
+  "WEB_WELCOME_TITLE": "Pa pojdimo",
   "YEAR": "Leto",
-  "YES": "JA",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Predvajajmo lokalno glasbo, medtem ko ni internetne povezave.",
-  "YOUTUBE_NO_RESULTS": "Iskali smo širno, a tega nismo mogli najti.",
-  "YOUTUBE_WELCOME": "Išči za glasbo ali pa vpiši povezavo",
-  "YOUTUBE_WELCOME_SUBTITLE": "Priporočila se bodo pojavljala tukaj, glede na to, kaj boste iskali.",
-  "YOUTUBE_WELCOME_TITLE": "Pa pojdimo"
+  "YES": "JA"
 }
