--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "İnternet bağlantını kontrol et",
   "KNOW_MORE": "Daha fazla bilgi",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Koleksiyonunda en az bir klasör kalmalıdır.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Müzik dinleniyor 💜",
   "LYRICS": "Sözler",
   "LYRICS_NOT_FOUND": "Söz bulunamadı.",
   "LYRICS_RETRIEVING": "Sözler getiriliyor...",
   "MENU": "Menü",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Sessiz",
   "M_TRACKS_AND_N_ALBUMS": "M Müzik ile N Albüm",
   "NEXT": "Sonraki",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Listedeki müzikler",
   "PLAY_NOW": "Şimdi oynat",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Önceki",
   "RECOMMENDATIONS": "Önerilenler",
   "REFRESH": "YENİLE",
@@ -173,12 +175,12 @@
   "UNMUTE": "Unmute",
   "VIDEO_SINGLE": "Video",
   "WARNING": "UYARI",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "Çevrimiçi olana kadar cihazındaki bir müziği oynatabilirsin.",
+  "WEB_NO_RESULTS": "Aramanla eşleşen bir sonuç bulunamadı.",
+  "WEB_WELCOME": "Bir müzik ara veya bağlantı yapıştır...",
+  "WEB_WELCOME_SUBTITLE": "Önerilenler dinlediklerinize göre görüntülenir.",
+  "WEB_WELCOME_TITLE": "Hadi başlayalım...",
   "YEAR": "Yıl",
-  "YES": "EVET",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Çevrimiçi olana kadar cihazındaki bir müziği oynatabilirsin.",
-  "YOUTUBE_NO_RESULTS": "Aramanla eşleşen bir sonuç bulunamadı.",
-  "YOUTUBE_WELCOME": "Bir müzik ara veya bağlantı yapıştır...",
-  "YOUTUBE_WELCOME_SUBTITLE": "Önerilenler dinlediklerinize göre görüntülenir.",
-  "YOUTUBE_WELCOME_TITLE": "Hadi başlayalım..."
+  "YES": "EVET"
 }
