--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
   "KNOW_MORE": "УЗНАТЬ БОЛЬШЕ",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Оставьте хотя бы одну папку.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Слушает музыку 💜",
   "LYRICS": "Текст",
   "LYRICS_NOT_FOUND": "Текст не найден.",
   "LYRICS_RETRIEVING": "Получение...",
   "MENU": "Меню",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Отключить звук",
   "M_TRACKS_AND_N_ALBUMS": "M треков & N альбомов",
   "NEXT": "Далее",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Плейлист",
   "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
   "PLAY_NOW": "Проиграть",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Назад",
   "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "ОБНОВИТЬ",
@@ -173,12 +175,12 @@
   "UNMUTE": "Включить звук",
   "VIDEO_SINGLE": "Видео",
   "WARNING": "Предупреждение",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "Пока можете послушать локальную музыку...",
+  "WEB_NO_RESULTS": "Ничего подобного найдено не было.",
+  "WEB_WELCOME": "Ищите музыку или вставьте ссылку",
+  "WEB_WELCOME_SUBTITLE": "Здесь будут появляться рекомендации.",
+  "WEB_WELCOME_TITLE": "Поехали!",
   "YEAR": "Год",
-  "YES": "ДА",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Пока можете послушать локальную музыку...",
-  "YOUTUBE_NO_RESULTS": "Ничего подобного найдено не было.",
-  "YOUTUBE_WELCOME": "Ищите музыку или вставьте ссылку",
-  "YOUTUBE_WELCOME_SUBTITLE": "Здесь будут появляться рекомендации.",
-  "YOUTUBE_WELCOME_TITLE": "Поехали!"
+  "YES": "ДА"
 }
