--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "Granska din internetanslutning.",
   "KNOW_MORE": "VET MER",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Minst en mapp bör finnas i din samling.",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Lyssnar på musik 💜",
   "LYRICS": "Låttexter",
   "LYRICS_NOT_FOUND": "Låttexter inte funna.",
   "LYRICS_RETRIEVING": "Hämtar låttexter...",
   "MENU": "Meny",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M låtar & N album",
   "NEXT": "Nästa",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Här är låtarna i denna spellista",
   "PLAY_NOW": "Spela nu",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Föregående",
   "RECOMMENDATIONS": "Rekommenderat",
   "REFRESH": "UPPDATERA",
@@ -173,12 +175,12 @@
   "UNMUTE": "Unmute",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Varning",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "Låt oss spela din lokala musik, medan du återgår online.",
+  "WEB_NO_RESULTS": "Inget sådant hittades.",
+  "WEB_WELCOME": "Sök musik eller ange länk",
+  "WEB_WELCOME_SUBTITLE": "Rekommendationer kommer syns här baserat på vad du lyssnar på.",
+  "WEB_WELCOME_TITLE": "Då kör vi",
   "YEAR": "År",
-  "YES": "JA",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Låt oss spela din lokala musik, medan du återgår online.",
-  "YOUTUBE_NO_RESULTS": "Inget sådant hittades.",
-  "YOUTUBE_WELCOME": "Sök musik eller ange länk",
-  "YOUTUBE_WELCOME_SUBTITLE": "Rekommendationer kommer syns här baserat på vad du lyssnar på.",
-  "YOUTUBE_WELCOME_TITLE": "Då kör vi"
+  "YES": "JA"
 }
