--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -61,13 +61,13 @@
   "INTERNET_ERROR": "检查您的网络连接。",
   "KNOW_MORE": "了解更多",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "您的收藏中需要只是包括一个目录。",
-  "LESS": "LESS",
+  "LESS": "Less",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "歌词",
   "LYRICS_NOT_FOUND": "歌词未找到。",
   "LYRICS_RETRIEVING": "获取歌词中...",
   "MENU": "菜单",
-  "MORE": "MORE",
+  "MORE": "More",
   "MUTE": "切换静音",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "下一个",
@@ -101,6 +101,8 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "这里展示的是播放列表中的歌曲",
   "PLAY_NOW": "现在播放",
+  "PLAY_URL": "Play URL",
+  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "推荐",
   "REFRESH": "刷新",
@@ -173,12 +175,12 @@
   "UNMUTE": "关闭静音",
   "VIDEO_SINGLE": "Video",
   "WARNING": "警告",
+  "WEB": "YT Music",
+  "WEB_INTERNET_ERROR": "当前离线中，播放一些本地音乐吧。",
+  "WEB_NO_RESULTS": "未找到结果。",
+  "WEB_WELCOME": "搜索音乐或输入链接",
+  "WEB_WELCOME_SUBTITLE": "建议将根据您收听的内容显示在此处。",
+  "WEB_WELCOME_TITLE": "Let's Go",
   "YEAR": "发行年份",
-  "YES": "是",
-  "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "当前离线中，播放一些本地音乐吧。",
-  "YOUTUBE_NO_RESULTS": "未找到结果。",
-  "YOUTUBE_WELCOME": "搜索音乐或输入链接",
-  "YOUTUBE_WELCOME_SUBTITLE": "建议将根据您收听的内容显示在此处。",
-  "YOUTUBE_WELCOME_TITLE": "Let's Go"
+  "YES": "是"
 }
