add new const strings

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Musiqi",
   "TRANSFERS": "Transferlər",
   "UNMUTE": "SƏSSİZDƏN ÇIXAR",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "BİLDİRİŞ",
   "WEB": "YT Music",
