--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -47,7 +47,7 @@
   "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVER",
   "DISCOVERING_FILES": "Discovering files...",
-  "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
+  "DOWNLOAD_UPDATE": "UPDATE",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
   "EXIT_NOW_PLAYING": "Exit now playing",
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Track",
   "TRANSFERS": "Transfers",
   "UNMUTE": "Unmute",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Warning",
   "WEB": "YT Music",
