--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "موسیقی",
   "TRANSFERS": "انتقالات",
   "UNMUTE": "با صدا",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "هشدار",
   "WEB": "یوتیوب",
