--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Chanson",
   "TRANSFERS": "Transferts",
   "UNMUTE": "Unmute",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Attention",
   "WEB": "YT Music",
