--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Track",
   "TRANSFERS": "ट्रांसफर्स",
   "UNMUTE": "Unmute",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "चेतावनी",
   "WEB": "YT Music",
