--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Szám",
   "TRANSFERS": "Átvitelek",
   "UNMUTE": "Unmute",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Warning",
   "WEB": "YT Music",
