--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "トラック",
   "TRANSFERS": "転送",
   "UNMUTE": "ミュート解除",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "注意",
   "WEB": "YT Music",
