--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -47,7 +47,7 @@
   "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVER",
   "DISCOVERING_FILES": "Discovering files...",
-  "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
+  "DOWNLOAD_UPDATE": "UPDATE",
   "ENABLE_125_SCALING": "Vergroting (125%) inschakelen",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylvervaging inschakelen",
   "EXIT_NOW_PLAYING": "Exit now playing",
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Nummer",
   "TRANSFERS": "Overdrachten",
   "UNMUTE": "Unmute",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Waarschuwing",
   "WEB": "YT Music",
