--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Faixas",
   "TRANSFERS": "Transferências",
   "UNMUTE": "Desativar Mudo",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Aviso",
   "WEB": "YT Music",
