--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Müzik",
   "TRANSFERS": "Transferler",
   "UNMUTE": "Unmute",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "UYARI",
   "WEB": "YT Music",
