--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "歌曲",
   "TRANSFERS": "传输",
   "UNMUTE": "关闭静音",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "警告",
   "WEB": "YT Music",
