--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Track",
   "TRANSFERS": "Transfers",
   "UNMUTE": "Unmute",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Warning",
   "WEB": "YT Music",
