--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Hira",
   "TRANSFERS": "Famindrana",
   "UNMUTE": "Unmute",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Tandremo",
   "WEB": "YT Music",
