--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Трек",
   "TRANSFERS": "ПЕРЕДАЧИ",
   "UNMUTE": "Включить звук",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Видео",
   "WARNING": "Предупреждение",
   "WEB": "YT Music",
