--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -173,6 +173,7 @@
   "TRACK_SINGLE": "Pesem",
   "TRANSFERS": "Prenosi",
   "UNMUTE": "Unmute",
+  "UPDATE_AVAILABLE": "Update available: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Opozorilo",
   "WEB": "YT Music",
