--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -27,7 +27,7 @@
   "COLLECTION_OTHER_SUBHEADER_TRACK": "More tracks",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Delete the playlist \"NAME\"?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Delete",
-  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
+  "COLLECTION_SEARCH_LABEL": "Lookup Music",
   "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Nothing like that could be found in your collection",
   "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
   "COLLECTION_SEARCH_WELCOME": "Search albums, tracks or artists...",
