update english translations

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -1,7 +1,7 @@
 {
   "ABOUT_SUBTITLE": "Information about the app & its developers",
   "ABOUT_TITLE": "About",
-  "ADD_NEW_FOLDER": "ADD NEW FOLDER",
+  "ADD_NEW_FOLDER": "Add new folder",
   "ADD_TO_NOW_PLAYING": "Add to now playing",
   "ADD_TO_PLAYLIST": "Add to playlist",
   "ALBUM": "Albums",
@@ -10,12 +10,12 @@
   "ARTIST": "Artists",
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
-  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Start playing other music from collection after queue completion",
+  "AUTO_REFRESH_SETTING": "Check for new files on fresh start",
   "A_TO_Z": "A to Z",
   "BUFFERING": "Buffering...",
   "CANCEL": "CANCEL",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change \"Now Playing Bar\" color based on music",
   "COLLECTION": "Collection",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Delete the album \"NAME\"?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Delete",
@@ -158,7 +158,7 @@
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Share",
   "SHOW_ALBUM": "Show album",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to \"Now Playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SHUFFLE": "Shuffle",
   "SORT": "Sort",
